@@ -53,6 +53,7 @@ Version 1.02.0
 - -lang qb's __offsetof() won't truncate the offset to 16 bit anymore
 - Unix rtlib: division-by-zero crash on console I/O commands such as Input, if the terminal size couldn't be queried
 - Unix rtlib: memory leak in X11 keyboard input handling initialization
+- gfxlib2: memory leak of thread-specific data
 
 
 Version 1.01.0
